<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.storyapp.ui.story.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_story"
        android:name="com.example.storyapp.ui.story.AddStoryFragment"
        android:label="@string/title_add_story"
        tools:layout="@layout/fragment_add_story" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.storyapp.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.storyapp.ui.story.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

</navigation>